@@ -242,19 +242,8 @@ decl_stmt|;
 DECL|field|TEST_KEYSTORE
 specifier|private
 specifier|static
-specifier|final
 name|File
 name|TEST_KEYSTORE
-init|=
-operator|new
-name|File
-argument_list|(
-name|ExternalPaths
-operator|.
-name|SOURCE_HOME
-argument_list|,
-literal|"example/etc/solrtest.keystore"
-argument_list|)
 decl_stmt|;
 DECL|field|SSL_PROPS
 specifier|private
@@ -279,6 +268,42 @@ argument_list|()
 decl_stmt|;
 static|static
 block|{
+name|TEST_KEYSTORE
+operator|=
+operator|(
+literal|null
+operator|==
+name|ExternalPaths
+operator|.
+name|SOURCE_HOME
+operator|)
+condition|?
+literal|null
+else|:
+operator|new
+name|File
+argument_list|(
+name|ExternalPaths
+operator|.
+name|SOURCE_HOME
+argument_list|,
+literal|"example/etc/solrtest.keystore"
+argument_list|)
+expr_stmt|;
+name|String
+name|keystorePath
+init|=
+literal|null
+operator|==
+name|TEST_KEYSTORE
+condition|?
+literal|null
+else|:
+name|TEST_KEYSTORE
+operator|.
+name|getAbsolutePath
+argument_list|()
+decl_stmt|;
 name|SSL_PROPS
 operator|.
 name|put
@@ -303,10 +328,7 @@ name|put
 argument_list|(
 literal|"javax.net.ssl.keyStore"
 argument_list|,
-name|TEST_KEYSTORE
-operator|.
-name|getAbsolutePath
-argument_list|()
+name|keystorePath
 argument_list|)
 expr_stmt|;
 name|SSL_PROPS
@@ -324,10 +346,7 @@ name|put
 argument_list|(
 literal|"javax.net.ssl.trustStore"
 argument_list|,
-name|TEST_KEYSTORE
-operator|.
-name|getAbsolutePath
-argument_list|()
+name|keystorePath
 argument_list|)
 expr_stmt|;
 name|SSL_PROPS
@@ -339,6 +358,18 @@ argument_list|,
 literal|"secret"
 argument_list|)
 expr_stmt|;
+block|}
+comment|/**    * Returns the File object for the example keystore used when this baseclass randomly     * uses SSL.  May be null ifthis test does not appear to be running as part of the     * standard solr distribution and does not have access to the example configs.    *    * @lucene.internal     */
+DECL|method|getExampleKeystoreFile
+specifier|protected
+specifier|static
+name|File
+name|getExampleKeystoreFile
+parameter_list|()
+block|{
+return|return
+name|TEST_KEYSTORE
+return|;
 block|}
 annotation|@
 name|BeforeClass
@@ -372,6 +403,45 @@ operator|.
 name|nextBoolean
 argument_list|()
 decl_stmt|;
+comment|// only randomize SSL if we are a solr test with access to the example keystore
+if|if
+condition|(
+literal|null
+operator|==
+name|getExampleKeystoreFile
+argument_list|()
+condition|)
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Solr's example keystore not defined (not a solr test?) skipping SSL randomization"
+argument_list|)
+expr_stmt|;
+name|manageSslProps
+operator|=
+literal|false
+expr_stmt|;
+return|return;
+block|}
+name|assertTrue
+argument_list|(
+literal|"test keystore does not exist, randomized ssl testing broken: "
+operator|+
+name|getExampleKeystoreFile
+argument_list|()
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|,
+name|getExampleKeystoreFile
+argument_list|()
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
 comment|// only randomize SSL if none of the SSL_PROPS are already set
 specifier|final
 name|Map
@@ -421,26 +491,9 @@ name|manageSslProps
 operator|=
 literal|false
 expr_stmt|;
-break|break;
+return|return;
 block|}
 block|}
-name|assertTrue
-argument_list|(
-literal|"test keystore does not exist, can't be used for randomized "
-operator|+
-literal|"ssl testing: "
-operator|+
-name|TEST_KEYSTORE
-operator|.
-name|getAbsolutePath
-argument_list|()
-argument_list|,
-name|TEST_KEYSTORE
-operator|.
-name|exists
-argument_list|()
-argument_list|)
-expr_stmt|;
 if|if
 condition|(
 name|manageSslProps
