@@ -36,6 +36,7 @@ specifier|public
 class|class
 name|ExternalPaths
 block|{
+comment|/**    *<p>    * The main directory path for the solr source being built if it can be determined.  If it     * can not be determined -- possily because the current context is a client code base     * using hte test frameowrk -- then this variable will be null.    *</p>    *<p>    * Note that all other static paths available in this class are derived from the source     * home, and if it is null, those paths will just be relative to 'null' and may not be     * meaningful.    */
 DECL|field|SOURCE_HOME
 specifier|public
 specifier|static
@@ -46,6 +47,7 @@ init|=
 name|determineSourceHome
 argument_list|()
 decl_stmt|;
+comment|/* @see #SOURCE_HOME */
 DECL|field|WEBAPP_HOME
 specifier|public
 specifier|static
@@ -63,6 +65,7 @@ operator|.
 name|getAbsolutePath
 argument_list|()
 decl_stmt|;
+comment|/* @see #SOURCE_HOME */
 DECL|field|EXAMPLE_HOME
 specifier|public
 specifier|static
@@ -80,6 +83,7 @@ operator|.
 name|getAbsolutePath
 argument_list|()
 decl_stmt|;
+comment|/* @see #SOURCE_HOME */
 DECL|field|EXAMPLE_MULTICORE_HOME
 specifier|public
 specifier|static
@@ -97,6 +101,7 @@ operator|.
 name|getAbsolutePath
 argument_list|()
 decl_stmt|;
+comment|/* @see #SOURCE_HOME */
 DECL|field|EXAMPLE_SCHEMA
 specifier|public
 specifier|static
@@ -107,6 +112,7 @@ name|EXAMPLE_HOME
 operator|+
 literal|"/collection1/conf/schema.xml"
 decl_stmt|;
+comment|/* @see #SOURCE_HOME */
 DECL|field|EXAMPLE_CONFIG
 specifier|public
 specifier|static
@@ -117,14 +123,15 @@ name|EXAMPLE_HOME
 operator|+
 literal|"/collection1/conf/solrconfig.xml"
 decl_stmt|;
+comment|/**    * Ugly, ugly hack to determine the example home without depending on the CWD    * this is needed for example/multicore tests which reside outside the classpath.    * if the source home can't be determined, this method returns null.    */
 DECL|method|determineSourceHome
 specifier|static
 name|String
 name|determineSourceHome
 parameter_list|()
 block|{
-comment|// ugly, ugly hack to determine the example home without depending on the CWD
-comment|// this is needed for example/multicore tests which reside outside the classpath
+try|try
+block|{
 name|File
 name|file
 decl_stmt|;
@@ -198,6 +205,7 @@ decl_stmt|;
 while|while
 condition|(
 operator|!
+operator|(
 operator|new
 name|File
 argument_list|(
@@ -208,6 +216,11 @@ argument_list|)
 operator|.
 name|exists
 argument_list|()
+operator|)
+operator|&&
+literal|null
+operator|!=
+name|base
 condition|)
 block|{
 name|base
@@ -219,6 +232,14 @@ argument_list|()
 expr_stmt|;
 block|}
 return|return
+operator|(
+literal|null
+operator|==
+name|base
+operator|)
+condition|?
+literal|null
+else|:
 operator|new
 name|File
 argument_list|(
@@ -230,6 +251,18 @@ operator|.
 name|getAbsolutePath
 argument_list|()
 return|;
+block|}
+catch|catch
+parameter_list|(
+name|RuntimeException
+name|e
+parameter_list|)
+block|{
+comment|// all bets are off
+return|return
+literal|null
+return|;
+block|}
 block|}
 block|}
 end_class
